fix: fix not showing images/videos as per bad path. Path fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,7 @@ section {
     -webkit-transform: translateX(-50%) translateY(-50%);
     width: 300px;
     height: 300px;
-    background-image: url('/assets/images/logo.png');
+    background-image: url('../images/logo.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
